Closed
Bug 1906032
Opened 1 year ago
Closed 1 year ago
Perma [clang-trunk] mingw js/src/util/Text.h:39:15: error: implicit instantiation of undefined template 'std::char_traits<unsigned char>'
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
129 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox-esr128 | --- | unaffected |
| firefox127 | --- | unaffected |
| firefox128 | --- | unaffected |
| firefox129 | --- | fixed |
People
(Reporter: glandium, Assigned: jandem)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
[task 2024-07-03T01:04:52.960Z] 01:04:52 ERROR - /builds/worker/checkouts/gecko/js/src/util/Text.h:39:15: error: implicit instantiation of undefined template 'std::char_traits<unsigned char>'
[task 2024-07-03T01:04:52.961Z] 01:04:52 INFO - 39 | return std::char_traits<CharT>::length(s);
[task 2024-07-03T01:04:52.961Z] 01:04:52 INFO - | ^
[task 2024-07-03T01:04:52.961Z] 01:04:52 INFO - /builds/worker/checkouts/gecko/js/src/jsapi-tests/testStringBuffers.cpp:15:29: note: in instantiation of function template specialization 'js_strlen<unsigned char>' requested here
[task 2024-07-03T01:04:52.962Z] 01:04:52 INFO - 15 | static const size_t len = js_strlen(chars);
[task 2024-07-03T01:04:52.962Z] 01:04:52 INFO - | ^
[task 2024-07-03T01:04:52.962Z] 01:04:52 INFO - /builds/worker/fetches/clang/bin/../x86_64-w64-mingw32/include/c++/v1/__string/char_traits.h:45:8: note: template is declared here
[task 2024-07-03T01:04:52.963Z] 01:04:52 INFO - 45 | struct char_traits;
[task 2024-07-03T01:04:52.963Z] 01:04:52 INFO - | ^
[task 2024-07-03T01:04:52.963Z] 01:04:52 INFO - 2 warnings and 1 error generated.
[task 2024-07-03T01:04:52.964Z] 01:04:52 ERROR - gmake[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:675: Unified_cpp_js_src_jsapi-tests21.o] Error 1
https://treeherder.mozilla.org/logviewer?job_id=464952707&repo=toolchains&lineNumber=167662
See bug 1890905 for an earlier instance of a similar problem.
| Reporter | ||
Updated•1 year ago
|
Blocks: clang-19
Summary: Perma [clang-trunk] js/src/util/Text.h:39:15: error: implicit instantiation of undefined template 'std::char_traits<unsigned char>' → Perma [clang-trunk] mingw js/src/util/Text.h:39:15: error: implicit instantiation of undefined template 'std::char_traits<unsigned char>'
Comment 1•1 year ago
|
||
Set release status flags based on info from the regressing bug 1903037
:jandem, since you are the author of the regressor, bug 1903037, could you take a look? Also, could you set the severity field?
For more information, please visit BugBot documentation.
status-firefox127:
--- → unaffected
status-firefox128:
--- → unaffected
status-firefox129:
--- → affected
status-firefox-esr115:
--- → unaffected
Flags: needinfo?(jdemooij)
| Assignee | ||
Updated•1 year ago
|
Assignee: nobody → jdemooij
Status: NEW → ASSIGNED
Flags: needinfo?(jdemooij)
| Assignee | ||
Comment 2•1 year ago
|
||
Newer Clang versions don't have the base template that works with unsigned char:
https://releases.llvm.org/16.0.0/projects/libcxx/docs/ReleaseNotes.html#upcoming-deprecations-and-removals
Pushed by jdemooij@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/d0703b232211
Don't use deprecated std::char_traits<unsigned char> in js_strlen. r=sfink
Comment 4•1 year ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 129 Branch
Comment 5•1 year ago
|
||
Set release status flags based on info from the regressing bug 1903037
status-firefox-esr128:
--- → unaffected
You need to log in
before you can comment on or make changes to this bug.
Description
•