Bug 1906032 - Don't use deprecated std::char_traits<unsigned char> in js_strlen. r=sfink

Newer Clang versions don't have the base template that works with `unsigned char`:
https://releases.llvm.org/16.0.0/projects/libcxx/docs/ReleaseNotes.html#upcoming-deprecations-and-removals

Differential Revision: https://phabricator.services.mozilla.com/D215663